--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@react-pdf/renderer": "^4.3.1",
     "bcrypt": "^6.0.0",
     "framer-motion": "^12.23.24",
+    "js-tiktoken": "^1.0.21",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.553.0",
     "next": "16.0.1",
     "openai": "^6.8.1",
     "pdfkit": "^0.17.2",
