--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@prisma/client": "^6.19.0",
     "@react-pdf/renderer": "^4.3.1",
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.3",
     "framer-motion": "^12.23.24",
     "js-tiktoken": "^1.0.21",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.553.0",
     "next": "16.0.1",
+    "nodemailer": "^7.0.10",
     "openai": "^6.8.1",
+    "pdf-lib": "^1.17.1",
     "pdfkit": "^0.17.2",
     "prisma": "^6.19.0",
     "react": "19.2.0",
@@ -29,8 +32,10 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/bcrypt": "^6.0.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.3",
     "@types/pdfkit": "^0.17.3",
     "@types/react": "^19",
     "@types/react-dom": "^19",
